--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -39,4 +39,18 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="scrollBy"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thread Start"
+        android:onClick="onClick"
+        android:id="@+id/btn_thread_start" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thread Run"
+        android:onClick="onClick"
+        android:id="@+id/btn_thread_run" />
 </LinearLayout>
