--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -53,4 +53,15 @@
         android:text="Thread Run"
         android:onClick="onClick"
         android:id="@+id/btn_thread_run" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:id="@+id/btn_get_qr"
+        android:text="get qr"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2" />
 </LinearLayout>
