--- a/app/src/main/res/layout/activity_async_task_test.xml
+++ b/app/src/main/res/layout/activity_async_task_test.xml
@@ -1,34 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.borg.androidemo.activity.AsyncTaskTestActivity">
+    android:orientation="vertical"
+    tools:context="com.borg.mvp.view.AsyncTaskTestActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="btn1"
+        android:text="串行执行"
         android:id="@+id/btn1"
         android:layout_below="@+id/textView2"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="184dp"
-        android:layout_marginEnd="184dp" />
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="btn2"
+        android:text="并行执行"
         android:id="@+id/btn2"
         android:layout_below="@+id/btn1"
         android:layout_alignLeft="@+id/btn1"
-        android:layout_alignStart="@+id/btn1"
-        android:layout_marginTop="61dp" />
+        android:layout_alignStart="@+id/btn1" />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="cancel"
+        android:id="@+id/btn_cancel"/>
+</LinearLayout>
