--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,8 @@
     <declare-styleable name="CircleView">
         <attr name="cicle_color" format="color"></attr>
     </declare-styleable>
+
+    <declare-styleable name="MyEditText">
+        <attr name="hint_textSize" format="dimension"></attr>
+    </declare-styleable>
 </resources>
