带有表情的字符串

--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -11,6 +11,7 @@
         android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
         android:id="@+id/tv_test"/>
     <com.borg.mvp.view.widget.MyEditText
+        android:id="@+id/et_test"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
