--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,20 @@
     <color name="button_text">#000000</color>
   <!--   <color name="button_text">#698CD6</color> -->
 
-
+    <drawable name="gray">#FF808080</drawable>
+    <drawable name="white">#FFFFFFFF</drawable>
+    <drawable name="blue">#FF0000FF</drawable>
+    <drawable name="black">#FF000000</drawable>
+    <drawable name="pink">#FFFFC0Cb</drawable>
+    <drawable name="red">#FFFF0000</drawable>
+    <drawable name="orange">#FFFF8D00</drawable>
+    <drawable name="yellow">#FFFFFF00</drawable>
+    <drawable name="green">#FF00FF00</drawable>
+    <drawable name="lightyellow">#FFFFFFE0</drawable>
+    <drawable name="lightblue">#FFE3EEFB</drawable>
+    <drawable name="oceanblue">#FF5271A5</drawable>
+    <drawable name="lightgreen">#FF96FF00</drawable>
+    <drawable name="grassgreen">#FF009600</drawable>
+    <drawable name="lightgray">#FFD3D3D3</drawable>
+    <drawable name="darkgray">#00535252</drawable>
 </resources>
