--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,27 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.zhy.sample.demo_recyclerview.MainActivity" >
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    <item
+        android:id="@+id/id_action_add"
+        android:icon="@mipmap/actionbar_add_icon"
+        android:orderInCategory="100"
+        android:title="add"
+        app:showAsAction="ifRoom">
+    </item>
+    <item
+        android:id="@+id/id_action_delete"
+        android:icon="@mipmap/ic_menu_delete"
+        android:orderInCategory="100"
+        android:title="delete"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/id_action_gridview"
+        android:orderInCategory="100"
+         android:title="GirdView"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/id_action_listview"
+        android:orderInCategory="100"
+         android:title="ListView"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/id_action_horizontalGridView"
+        android:orderInCategory="100"
+         android:title="HorizontalGridView"
+        app:showAsAction="never"/>
+    
+      <item
+        android:id="@+id/id_action_staggeredgridview"
+        android:orderInCategory="100"
+         android:title="StaggeredGridView"
+        app:showAsAction="never"/>
 
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_refresh"
-          android:checkable="false"
-          android:orderInCategory="1"
-        android:title="refresh"/>
-    <item android:id="@+id/menu_scan"
-          android:title="@string/menu_scan"
-          android:orderInCategory="100" />
-    <item android:id="@+id/menu_stop"
-          android:title="@string/menu_stop"
-          android:orderInCategory="101" />
 </menu>
