--- a/app/src/main/res/layout/activity_single_recyclerview.xml
+++ b/app/src/main/res/layout/activity_single_recyclerview.xml
@@ -7,5 +7,17 @@
         android:id="@+id/id_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal|top">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="header"/>
+
+    </com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>
 </RelativeLayout>
