添加下拉刷新和上拉刷新

--- a/app/src/main/res/layout/activity_single_recyclerview.xml
+++ b/app/src/main/res/layout/activity_single_recyclerview.xml
@@ -2,11 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/id_recyclerview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <com.borg.mvp.view.recyclerview.LoadMoreRecyclerView
+            android:id="@+id/id_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
     <com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
         android:id="@+id/header"
         android:layout_width="match_parent"
