--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,4 +44,5 @@
     <drawable name="darkgray">#00535252</drawable>
     <color name="color_item_press">#ffff0000</color>
     <color name="color_item_normal">#44ff0000</color>
+    <color name="global_bg">#eeeff3</color>
 </resources>
