--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="common_title">20sp</dimen>
     <dimen name="common_text">16sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="navigation_drawer_width">240dp</dimen>
 </resources>
