--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:adnroid="http://schemas.android.com/apk/res/android">
 
-<style name="titleTheme" parent="Theme.AppCompat" >
-  <!-- <item name="android:windowTitleSize">30dp</item>  -->
-  <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
-  <item name="android:windowTitleStyle">@style/CustomWindowTitleText</item>
-</style>
+  <style name="titleTheme" parent="Theme.AppCompat" >
+    <!-- <item name="android:windowTitleSize">30dp</item>  -->
+    <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
+    <item name="android:windowTitleStyle">@style/CustomWindowTitleText</item>
+  </style>
 
+  <style name="FullScreenTheme" parent="titleTheme">
+    <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:colorBackgroundCacheHint">@null</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="android:windowIsTranslucent">true</item>
+  </style>
 </resources>
