--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,4 +45,14 @@
     <color name="color_item_press">#ffff0000</color>
     <color name="color_item_normal">#44ff0000</color>
     <color name="global_bg">#eeeff3</color>
+    <color name="white_dark">#f3f3f3</color>
+    <color name="gray_darker">#2b2b2b</color>
+    <color name="gray_light">#cccccc</color>
+    <color name="gray">#777</color>
+    <color name="gray_dark">#383838</color>
+
+    <color name="green_light">#8e9ea4</color>
+    <color name="green">#34515c</color>
+    <color name="green_dark">#1e3e4a</color>
+    <color name="white">#fafafa</color>
 </resources>
