--- a/app/src/main/res/layout/activity_ok_http_test.xml
+++ b/app/src/main/res/layout/activity_ok_http_test.xml
@@ -4,9 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/white"
     tools:context="com.borg.androidemo.activity.OkHttpTestActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:id="@+id/tv_hello"
+        android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
