--- a/app/src/main/res/layout/act_list_btn.xml
+++ b/app/src/main/res/layout/act_list_btn.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ffffff" >
+    android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/title"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/viewpager_margin_fix"
+        android:layout_marginRight="@dimen/viewpager_margin_fix"
+        android:paddingLeft="@dimen/viewpager_padding"
+        android:paddingRight="@dimen/viewpager_padding">
+        <LinearLayout
+            android:id="@+id/container"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:textSize="20sp" />
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_blue_bright"
+            android:orientation="vertical" >
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="#000000" >
-        </View>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textSize="20sp" />
 
-        <TextView
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#000000" >
+            </View>
+
+            <TextView
                 android:id="@+id/sub_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -34,6 +41,8 @@
                 android:gravity="center"
                 android:background="@drawable/selector_button"
                 android:textSize="16sp" />
-    </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
+
 
 </ScrollView>
