--- a/app/src/main/res/layout/activity_blur.xml
+++ b/app/src/main/res/layout/activity_blur.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/background"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="com.borg.mvp.view.BlurActivity">
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,4 +19,68 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="85dp" />
-</RelativeLayout>
+    <ProgressBar
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:indeterminateBehavior="repeat"
+        android:indeterminateOnly="true"
+        android:indeterminateDrawable="@drawable/progress"/>
+    <ProgressBar
+        android:id="@+id/pb_update"
+        android:layout_centerHorizontal="true"
+        android:layout_width="300dp"
+        android:progressDrawable="@drawable/progress_horizontal"
+        android:progress="50"
+        android:max="100"
+        android:padding="0dp"
+        android:layout_height="5dp"
+        android:background="#80ffffff"
+        android:layout_marginTop="69dp" />
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dip"
+        android:background="#80ffffff"
+        android:indeterminate="false"
+        android:indeterminateOnly="false"
+        android:maxHeight="20dip"
+        android:minHeight="20dip"
+        android:padding="0dip"
+        android:progress="0"
+        android:max="100"
+        android:progressDrawable="@drawable/progress_horizontal" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="5dp"
+        android:id="@+id/progressBar"
+        android:progress="50"
+        android:padding="0dp"
+        android:max="100"
+        android:background="#80ffffff"
+        android:progressDrawable="@drawable/progress_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:indeterminate="false" />
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_marginTop="10dp"
+        android:layout_width="300dp"
+        android:layout_height="2dp"
+        android:id="@+id/progressBar2"
+        android:progress="50"
+        android:padding="0dp"
+        android:progressDrawable="@drawable/progress_horizontal"
+        android:background="#80ffffff"
+        android:layout_gravity="center_horizontal"
+        android:indeterminate="false" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button4"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="85dp" />
+</LinearLayout>
