--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,20 @@
   <style name="Theme.Account.Dialog" parent="@style/Base.Theme.AppCompat.Light">
     <item name="android:windowBackground">@color/fridge_transparent</item>
     <item name="android:windowIsTranslucent">true</item>
+    <item name="android:backgroundDimEnabled">false</item>
     <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
+  </style>
+  <style name="Transparent">
+    <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="android:windowIsTranslucent">true</item>
+    <item name="android:windowFullscreen">true</item>
+  </style>
+
+  <style name="Theme.D1NoTitleDim" parent="android:style/Theme.Translucent">
+    <item name="android:windowNoTitle">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+    <item name="android:backgroundDimEnabled">true</item>
+    <item name="android:background">@android:color/transparent</item>
   </style>
 </resources>
